--- a/KProject.Application/KProject.Application.csproj
+++ b/KProject.Application/KProject.Application.csproj
@@ -60,7 +60,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Converter\VehicleIconConverter.cs" />
-    <Compile Include="Utils\ObservableObject.cs" />
     <Compile Include="Utils\RelayCommand.cs" />
     <Compile Include="ViewModel\EditVehicleVM.cs" />
     <Compile Include="ViewModel\MainWindowVM.cs" />
@@ -119,7 +118,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Resource Include="Resources\Icons\bycicle.png" />
+    <Resource Include="Resources\Icons\bicycle.png" />
     <Resource Include="Resources\Icons\car.png" />
     <Resource Include="Resources\Icons\lorry.png" />
   </ItemGroup>
