--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -42,11 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Car.cs" />
-    <Compile Include="Garage.cs" />
-    <Compile Include="Lorry.cs" />
+    <Compile Include="Entities\Bicycle.cs" />
+    <Compile Include="Entities\Car.cs" />
+    <Compile Include="Entities\Garage.cs" />
+    <Compile Include="Entities\Lorry.cs" />
+    <Compile Include="Utils\ObservableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Vehicle.cs" />
+    <Compile Include="Entities\Vehicle.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
